--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sasha jumping-game</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./index.js" defer></script>
+    <script src="script.js"></script>
+    <title>Jumping Game</title>
 </head>
 <body>
-    
+    <h1>Sasha's Jumping Game</h1>
+    <canvas id="board"></canvas>
 </body>
 </html>
